--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,5 +1,9 @@
-<%- include('partials/header') %>
-<%- include('partials/alerts') %>
+<%#- include('/partials/header') %>
+<%#- include('/partials/alerts') %>
+
+<%- include('../partials/header') %>
+<%- include('../partials/alerts') %>
+
 <div class="min-h-screen flex items-center justify-center px-4">
   <div class="w-full max-w-4xl bg-white rounded-2xl shadow-lg overflow-hidden grid grid-cols-1 md:grid-cols-3">
 
@@ -70,4 +74,4 @@
   </div>
 </div>
 
-<%- include('partials/footer') %>
+<%- include('../partials/footer') %>
