--- a/views/partials/alerts.ejs
+++ b/views/partials/alerts.ejs
@@ -1,20 +1,35 @@
+<% if (typeof error !== 'undefined' && error.length > 0) { %>
+  <% error.forEach(msg => { %>
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+      <%= msg %>
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+  <% }) %>
+<% } %>
 
+<% if (typeof success !== 'undefined' && success.length > 0) { %>
+  <% success.forEach(msg => { %>
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+      <%= msg %>
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+  <% }) %>
+<% } %>
 
-  <% if (error && error.length > 0) { %>
-    <% error.forEach(msg => { %>
-      <div class="alert alert-danger alert-dismissible fade show" role="alert">
-        <%= msg %>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-      </div>
-    <% }) %>
-  <% } %>
-  
-  <% if (success && success.length > 0) { %>
-    <% success.forEach(msg => { %>
-      <div class="alert alert-success alert-dismissible fade show" role="alert">
-        <%= msg %>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-      </div>
-    <% }) %>
-  <% } %>
-  
+<% if (typeof info !== 'undefined' && info.length > 0) { %>
+  <% info.forEach(msg => { %>
+    <div class="alert alert-info alert-dismissible fade show" role="alert">
+      <%= msg %>
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+  <% }) %>
+<% } %>
+
+<% if (typeof warning !== 'undefined' && warning.length > 0) { %>
+  <% warning.forEach(msg => { %>
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+      <%= msg %>
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+  <% }) %>
+<% } %>
