--- a/views/users/verify.ejs
+++ b/views/users/verify.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header') %>
+<%- include('../partials/header') %>
 
 <div class="min-h-screen flex items-center justify-center bg-gray-100 p-4">
   <div class="bg-white p-6 rounded-lg shadow-md w-full max-w-md">
@@ -35,4 +35,4 @@
   </div>
 </div>
 
-<%- include('partials/footer') %>
+<%- include('../partials/footer') %>
